force-app/main/default/objects/SPEN_LandAssociation__c/SPEN_LandAssociation__c.object-meta.xml
<CustomObject>
    <description>Created as part of ESC-131.</description>
    <label>Land Contact</label>
    <nameField>
        <displayFormat>LC-{00000}</displayFormat>
        <label>Land Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Land Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>