force-app/main/default/objects/SPEN_LandAssociation__c/fields/SPEN_AssociatedWith__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AssociatedWith__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated With</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2 OR 3) AND 4</booleanFilter>
        <errorMessage>Association can only be done with Owner or Occupier.</errorMessage>
        <filterItems>
            <field>SPEN_LandAssociation__c.SPEN_AssociationType__c</field>
            <operation>equals</operation>
            <value>Occupier</value>
        </filterItems>
        <filterItems>
            <field>SPEN_LandAssociation__c.SPEN_AssociationType__c</field>
            <operation>equals</operation>
            <value>Owner</value>
        </filterItems>
        <filterItems>
            <field>SPEN_LandAssociation__c.SPEN_AssociationType__c</field>
            <operation>equals</operation>
            <value>Owner-Occupier</value>
        </filterItems>
        <filterItems>
            <field>SPEN_LandAssociation__c.SPEN_Land__c</field>
            <operation>equals</operation>
            <valueField>$Source.SPEN_Land__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SPEN_LandAssociation__c</referenceTo>
    <relationshipLabel>Land Contacts</relationshipLabel>
    <relationshipName>Land_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>