force-app/main/default/objects/SPEN_LandAssociation__c/fields/SPEN_AssociatedWithName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AssociatedWithName__c</fullName>
    <description>This field is created to be used in flow for ESC-1288</description>
    <formula>SPEN_AssociatedWith__r.SPEN_Land_Contact_Text__c</formula>
    <label>Associated With Name</label>
    <type>Text</type>
</CustomField>