force-app/main/default/objects/SPEN_LandAssociation__c/fields/SPEN_AssociationType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AssociationType__c</fullName>
    <label>Land Contact Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Occupier</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Solicitor</fullName>
            </value>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Owner-Occupier</fullName>
            </value>
            <value>
                <fullName>Alternative Payee</fullName>
            </value>
            <value>
                <fullName>3rd Party Landowner/Occupier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>