force-app/main/default/objects/SPEN_LandAssociation__c/fields/SPEN_BusinessPartnerNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_BusinessPartnerNumber__c</fullName>
    <formula>SPEN_Vendor__r.SPEN_BusinessPartnerNumber__c</formula>
    <label>Business Partner Number</label>
    <type>Text</type>
</CustomField>