force-app/main/default/objects/SPEN_LandAssociation__c/fields/SPEN_City__c.field-meta.xml
<CustomField>
    <fullName>SPEN_City__c</fullName>
    <formula>IF(RecordType.DeveloperName = &quot;SPEN_SAPVendor&quot;,    SPEN_Vendor__r.SPEN_City__c   ,   SPEN_LandContact__r.MailingCity  )</formula>
    <label>City</label>
    <type>Text</type>
</CustomField>