force-app/main/default/objects/SPEN_LandAssociation__c/fields/SPEN_ContactType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ContactType__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Contact Type</label>
    <type>Text</type>
</CustomField>