force-app/main/default/objects/SPEN_LandAssociation__c/fields/SPEN_Country__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Country__c</fullName>
    <formula>IF(RecordType.DeveloperName = &quot;SPEN_SAPVendor&quot;,       SPEN_Vendor__r.SPEN_Country__c      ,   SPEN_LandContact__r.MailingCountry  )</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>