force-app/main/default/objects/SPEN_LandAssociation__c/fields/SPEN_Land__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Land__c</fullName>
    <label>Land</label>
    <referenceTo>SPEN_Land__c</referenceTo>
    <relationshipLabel>Land Associations</relationshipLabel>
    <relationshipName>Land_Associations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>