force-app/main/default/objects/SPEN_LandAssociation__c/fields/SPEN_Land_Contact_Text__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Land_Contact_Text__c</fullName>
    <formula>IF(
    RecordType.DeveloperName = &quot;SPEN_SAPVendor&quot;,
       SPEN_Vendor__r.Name   ,SPEN_LandContact__r.FirstName &amp; &quot; &quot; &amp; SPEN_LandContact__r.LastName)</formula>
    <label>Land Contact</label>
    <type>Text</type>
</CustomField>