force-app/main/default/objects/SPEN_LandAssociation__c/fields/SPEN_LandContact__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LandContact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Land Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Land Associations</relationshipLabel>
    <relationshipName>Land_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>