force-app/main/default/objects/SPEN_LandAssociation__c/fields/SPEN_LandContactFullName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LandContactFullName__c</fullName>
    <formula>SPEN_LandContact__r.FirstName + &apos; &apos; + SPEN_LandContact__r.MiddleName + &apos; &apos; +  SPEN_LandContact__r.LastName</formula>
    <label>Land Contact Full Name</label>
    <type>Text</type>
</CustomField>