force-app/main/default/objects/SPEN_LandAssociation__c/fields/SPEN_OwnerVendorNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OwnerVendorNumber__c</fullName>
    <formula>SPEN_AssociatedWith__r.SPEN_Vendor_Number__c</formula>
    <label>Owner Vendor Number</label>
    <type>Text</type>
</CustomField>