force-app/main/default/objects/SPEN_LandAssociation__c/fields/SPEN_Phone__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Phone__c</fullName>
    <formula>IF(RecordType.DeveloperName = &quot;SPEN_SAPVendor&quot;,   SPEN_Vendor__r.Phone  ,   SPEN_LandContact__r.Phone  )</formula>
    <label>Phone</label>
    <type>Text</type>
</CustomField>