force-app/main/default/objects/SPEN_LandAssociation__c/fields/SPEN_PhonePreference__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PhonePreference__c</fullName>
    <formula>IF(RecordType.DeveloperName = &quot;SPEN_SAPVendor&quot;,   SPEN_Vendor__r.SPEN_PhonePreference__c  ,   SPEN_LandContact__r.SPEN_CallingPreferenceNumber__c  )</formula>
    <label>Phone Preference</label>
    <type>Text</type>
</CustomField>