force-app/main/default/objects/SPEN_LandAssociation__c/fields/SPEN_PostCode__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PostCode__c</fullName>
    <formula>IF(RecordType.DeveloperName = &quot;SPEN_SAPVendor&quot;,      SPEN_Vendor__r.SPEN_PostalCode__c     ,  SPEN_LandContact__r.MailingPostalCode )</formula>
    <label>Post Code</label>
    <type>Text</type>
</CustomField>