force-app/main/default/objects/SPEN_LandAssociation__c/fields/SPEN_State__c.field-meta.xml
<CustomField>
    <fullName>SPEN_State__c</fullName>
    <formula>IF(RecordType.DeveloperName = &quot;SPEN_SAPVendor&quot;,      SPEN_Vendor__r.SPEN_State__c     ,    SPEN_LandContact__r.MailingState  )</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>