force-app/main/default/objects/SPEN_LandAssociation__c/fields/SPEN_Street3__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Street3__c</fullName>
    <description>Created as part of ESC-1708.</description>
    <formula>SPEN_Vendor__r.SPEN_Street3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street 3</label>
    <type>Text</type>
</CustomField>