force-app/main/default/objects/SPEN_LandAssociation__c/fields/SPEN_Street__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Street__c</fullName>
    <formula>IF(RecordType.DeveloperName = &quot;SPEN_SAPVendor&quot;,     SPEN_Vendor__r.SPEN_Street__c    ,  SPEN_LandContact__r.MailingStreet )</formula>
    <label>Street</label>
    <type>Text</type>
</CustomField>