force-app/main/default/objects/SPEN_LandAssociation__c/fields/SPEN_Vendor__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Land Contacts</relationshipLabel>
    <relationshipName>Land_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>