force-app/main/default/objects/SPEN_LandAssociation__c/fields/SPEN_Vendor_Number__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Vendor_Number__c</fullName>
    <formula>SPEN_Vendor__r.SPEN_VendorNumber__c</formula>
    <label>Vendor Number</label>
    <type>Text</type>
</CustomField>