force-app/main/default/objects/SPEN_LandAssociation__c/fields/SPEN_VendorEmail__c.field-meta.xml
<CustomField>
    <fullName>SPEN_VendorEmail__c</fullName>
    <formula>IF(RecordType.DeveloperName = &quot;SPEN_SAPVendor&quot;,   SPEN_Vendor__r.SPEN_VendorEmail__c  ,   SPEN_LandContact__r.Email )</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>