force-app/main/default/objects/SPEN_LandAssociation__c/fields/SPEN_VendorEmailPreference__c.field-meta.xml
<CustomField>
    <fullName>SPEN_VendorEmailPreference__c</fullName>
    <formula>SPEN_Vendor__r.SPEN_VendorEmailPreference__c</formula>
    <label>Mail  Preference</label>
    <type>Text</type>
</CustomField>