force-app/main/default/objects/SPEN_LandAssociation__c/fields/SPEN_VendorNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_VendorNumber__c</fullName>
    <label>Vendor Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>