force-app/main/default/objects/SPEN_LandAssociation__c/recordTypes/SPEN_SAPVendor.recordType-meta.xml
<RecordType>
    <fullName>SPEN_SAPVendor</fullName>
    <active>true</active>
    <description>SAP Vendors</description>
    <label>Vendor</label>
</RecordType>