force-app/main/default/objects/SPEN_LandAssociation__c/recordTypes/SPEN_SFContact.recordType-meta.xml
<RecordType>
    <fullName>SPEN_SFContact</fullName>
    <active>true</active>
    <description>Salesforce Contacts</description>
    <label>Contact</label>
</RecordType>